# Framework-voyage-mvp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: BACKLOG.md  FAQ.md  README.md  VOYAGE_METHOD_LOCK.md  VOYAGE_V4_1_CONTRACT.md  _config.yml  _draft_task_engine_diff.patch  index.md
docs/architecture/: components.md  decision-log.md
docs/artifacts/: README.md
docs/auto/: NARRATIVE_SOURCE_ONLY_SPEC.example.json  NARRATIVE_SOURCE_ONLY_SPEC.json
docs/control-loop/: CONTROL_LOOP_10C_IMPLEMENTATION_PLAN.md  CONTROL_LOOP_10_MINIMAL_CONTROLLED_LAUNCHER.md  CONTROL_LOOP_2_CONTRACT.md  CONTROL_LOOP_3_CONTRACT.md  CONTROL_LOOP_4_GUARDED_EXECUTION.md  CONTROL_LOOP_5_CONTRACT.md  CONTROL_LOOP_6_CONTRACT.md  CONTROL_LOOP_7_ASSISTED_HANDOFF.md  CONTROL_LOOP_8_SUPERVISED_LOOP.md  CONTROL_LOOP_9_CONTROLLED_AUTO_LAUNCH.md  CONTROL_LOOP_SPEC.md  control-loop-1.yaml  control-loop-10.yaml  control-loop-10c.yaml  control-loop-2.yaml  control-loop-3.yaml  control-loop-5.yaml  control-loop-6.yaml  control-loop-7.yaml  control-loop-8.yaml  control-loop-9.yaml  loop-config.yaml
docs/drafts/: _draft_test_task_engine.py.txt
docs/examples/: ADAPTER_CONTRACT_EXAMPLE.md  ADAPTER_MOCK_IMPLEMENTATION.md
docs/framework/: FRAMEWORK_CONTROL_RULES.md  FRAMEWORK_DECISIONS.md  FRAMEWORK_MASTER_DEVELOPMENT_PLAN.md  FRAMEWORK_PROGRESS.md  FRAMEWORK_ROADMAP.md  FRAMEWORK_ROADMAP_OVERVIEW.md  MCP_INTERFACE_BOUNDARY.md  MCP_THREAT_MODEL.md  MODERNIZATION_CONCEPT.md
docs/guides/: ADAPTER_CONTRACT_USAGE.md  END_TO_END_WORKFLOW.md  INSTALLATION.md  PHASE_WORKFLOW_POLICY.md  QUICKSTART.md  USER_GUIDE.md
docs/handoff/: LATEST_AGENT_REPORT_TEMPLATE.md  MORNING_REPORT_TEMPLATE.md  NEXT_ACTION_TEMPLATE.md  README.md
docs/prompts/: PROMPT_PHASE_10_USER_GUIDE.md  PROMPT_PHASE_11_E2E_DEMO_SCENARIO.md  PROMPT_PHASE_12_LEGACY_CLEANUP_AUDIT.md  PROMPT_PHASE_13_CONTROLLED_CLEANUP_PLAN.md  PROMPT_PHASE_14_ROOT_IDENTITY_ALIGNMENT.md  PROMPT_PHASE_15_V4_3_RELEASE_READINESS_AUDIT.md  PROMPT_PHASE_16_DOCUMENTATION_IDENTITY_FIX_PLAN.md  PROMPT_PHASE_17_PUBLISHED_DOCS_IDENTITY_ALIGNMENT.md  PROMPT_PHASE_18_ARCHITECTURE_COMPONENTS_LEGACY_QUALIFICATION.md  PROMPT_PHASE_19_LANGGRAPH_TUTORIAL_LEGACY_QUALIFICATION.md  PROMPT_PHASE_20_PYPROJECT_METADATA_IDENTITY_QUALIFICATION.md  PROMPT_PHASE_21_V4_3_RELEASE_READINESS_REAUDIT.md  PROMPT_PHASE_22_PUBLISHED_DOCS_RESIDUAL_IDENTITY_CLEANUP.md  PROMPT_PHASE_23_PACKAGE_API_CLI_COMPATIBILITY_AUDIT.md  PROMPT_PHASE_24_PACKAGE_API_CLI_COMPATIBILITY_DECISION_PLAN.md  PROMPT_PHASE_25_PACKAGE_API_CLI_COMPATIBILITY_IMPLEMENTATION.md  PROMPT_PHASE_26_V4_3_RELEASE_READINESS_REAUDIT.md  PROMPT_PHASE_27_VERSION_RELEASE_POLICY_DECISION_PLAN.md  PROMPT_PHASE_28_RELEASE_WORKFLOW_IMPLEMENTATION.md  PROMPT_PHASE_29_VERSION_BUMP_4_3_0.md  PROMPT_PHASE_3.md  PROMPT_PHASE_30A_RELEASE_WORKFLOW_AST_EXTRAS_FIX.md  PROMPT_PHASE_30_WORKFLOW_DISPATCH_DRY_RUN_EVIDENCE.md  PROMPT_PHASE_31_FINAL_RELEASE_READINESS_REAUDIT.md  PROMPT_PHASE_32_V4_3_0_TAG_RELEASE_TRIGGER.md  PROMPT_PHASE_3_AUDIT.md  PROMPT_PHASE_4.md  PROMPT_PHASE_5.md  PROMPT_PHASE_6.md  PROMPT_PHASE_6_1.md  PROMPT_PHASE_7_ADAPTER_CONTRACT.md  PROMPT_PHASE_7_FINAL_AUDIT.md  PROMPT_PHASE_8_ADAPTER_USAGE_DOCS.md  PROMPT_PHASE_9_WORKFLOW_POLICY.md  PROMPT_PROCESS_AUDIT.md
docs/releases/: VOYAGE_V4_3_0_RELEASE_SUMMARY.md
docs/reports/: PHASE_4_IMPLEMENTATION_REPORT.md  VOYAGE_PHASE_12_LEGACY_CLEANUP_AUDIT.md  VOYAGE_PHASE_7_CLOSURE_AUDIT.md  (+17 more)
tests/: conftest.py
tools/: control_loop_checkpoint.ps1  control_loop_handoff.ps1  control_loop_next_task.ps1  control_loop_preflight.ps1  copy_latest_report.ps1  copy_report_to_clipboard.ps1
voyage_framework/: __init__.py  cli.py
voyage_framework_v4_mvp/: .gitignore  pyproject.toml
voyage_framework_v4_mvp/.github/workflows/: ci.yml
voyage_framework_v4_mvp/tests/unit/: test_models.py  test_sandbox.py  test_task_generator.py
voyage_framework_v4_mvp/voyage_framework/: __init__.py
voyage_framework_v4_mvp/voyage_framework/core/: __init__.py  storage.py
voyage_framework_v4_mvp/voyage_framework/security/: approval.py  sandbox.py
voyage_framework_v4_mvp/voyage_framework/specs/: task_generator.py  tracker.py
(+173 files in other folders)
