[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voyage-framework"
version = "4.3.0"
description = "Local Project Knowledge OS and Development Memory System for task memory, context packaging, audit logs, and external AI tool handoff"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AndreyVoyage", email = "andrey@example.com"}
]
keywords = ["project-knowledge", "development-memory", "task-management", "context-packaging", "audit-log"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
    "python-ulid>=2.0",
    "aiofiles>=23.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "coverage-badge>=1.1",
    "build>=1.0",
    "twine>=5.0",
]
semantic = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
ast = [
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
]
improvement = []
mcp = [
    "mcp==1.28.1",
]
langgraph = [
    "langgraph>=0.2",
    "langchain>=0.3",
]
all = [
    "voyage-framework[dev,semantic,ast,improvement,langgraph]",
]

[project.scripts]
voyage = "voyage_framework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voyage_framework", "voyage_framework.*"]
exclude = ["voyage_framework_v4_mvp", "voyage_framework_v4_mvp.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require DB/services)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["voyage_framework_v4_mvp", ".test-tmp", ".pytest-tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
